# rspec

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
colored/: enum.Color.html  index.html  struct.ColoredString.html  trait.Colorize.html
crossbeam_deque/: enum.Steal.html  index.html  struct.Deque.html  struct.Stealer.html
crossbeam_epoch/: fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.Handle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html
crossbeam_utils/: index.html
derive_builder/: index.html
derive_builder_core/: Bindings.t.html  BuildMethod.t.html  BuilderField.t.html  DeprecationNotes.t.html  doc_comment_from.v.html  enum.BuilderPattern.html  fn.doc_comment_from.html  index.html  sidebar-items.js  struct.Bindings.html  struct.Block.html  struct.BuildMethod.html  struct.Builder.html  struct.BuilderField.html  struct.DeprecationNotes.html  struct.Initializer.html  struct.RawTokens.html  struct.Setter.html
derive_new/: derive.v.html  fn.derive.html  index.html  sidebar-items.js
examples/: advanced.rs  game_of_life.rs  given_when_then.rs  macro.rs  multi.rs  simple.rs
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_ALG.html  constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAIF.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_IB.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_IRDA.html  (+2163 more)
proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.LexError.html  struct.Literal.html  struct.Op.html  struct.Span.html  struct.Term.html  struct.TokenStream.html
quote/: struct.Ident.html  struct.Tokens.html  trait.ToTokens.html
rand/: fn.random.html  (+15 more)
(+808 files in other folders)
