[package]
authors = [
    "Thomas Wickham <mackwic@gmail.com>",
    "Vincent Esche <regexident@gmail.com>",
]
description = "Write Rspec-like tests with stable rust"
homepage = "https://mackwic.github.io/rspec"
keywords = [
    "rspec",
    "test",
    "harness",
    "tdd",
    "bdd",
]
license = "MPL-2.0"
name = "rspec"
readme = "README.md"
repository = "https://github.com/rust-rspec/rspec"
version = "1.0.0-beta.4"

[build-dependencies.clippy]
optional = true
version = "0.0.153"

[dependencies]
colored = "1.4.0"
derive-new = "0.5.0"
derive_builder = "0.5.0"
rayon = "0.8.2"
time = "0.1.38"

[dependencies.expectest]
optional = true
version = "0.9.1"

[features]
default = []
expectest_compat = ["expectest"]
